syntax = "proto3";

option go_package = "./proto";

service ChatService {
    rpc pushMessage(pushMessageRequest) returns (pushMessageResponse);
    rpc GetChatContent (GetChatContentRequest) returns (stream GetChatContentResponse);
}

message pushMessageRequest {
    string userID = 1;
    string username = 2;
    string roomID = 3;
    string content = 4;
}

message pushMessageResponse {
    int32 errcode = 1;
}

message GetChatContentRequest {
    string userID = 1;
    string lastMessageTimeStamp = 2;
}

message ChatMessage {
    string ID = 1;
    string userID = 2;
    string roomID = 3;
    string timeStamp = 4;
    string content = 5;
}

message GetChatContentResponse {
    repeated ChatMessage messages = 1;
    string lastMessageTimeStamp = 2;
}